feat: control enterprise display permissions for VJ-76
